@@ -14,6 +14,7 @@ unsigned long opt_numlines = ~0UL;
 const char* opt_subject_prefix = 0;
 const char* opt_headerkeep = 0;
 const char* opt_headerstrip = 0;
+const char* opt_separator = 0;
 
 static void copy_bool(void* ptr, const char* value, unsigned int length)
 {
@@ -62,6 +63,7 @@ struct option options[] = {
 
   { "headerkeep", &opt_headerkeep, copy_str },
   { "headerstrip", &opt_headerstrip, copy_str },
+  { "separator", &opt_separator, copy_str },
   { "subject_prefix", &opt_subject_prefix, copy_str },
   { 0, 0, 0 }
 };
