@@ -162,6 +162,10 @@ option is also used.  If not given, all the lines in the original
 message body are copied.  This limit does not impact how many lines of
 the header are copied.
 .TP
+.B separator \fR(string)
+Add a separator line (or lines) between the response message and the
+copied message.
+.TP
 .B subject_prefix \fR(string)
 Add a subject line to the response message composed of the prefix
 .I STR
