@@ -15,6 +15,7 @@ extern unsigned long opt_numlines;
 extern const char* opt_subject_prefix;
 extern const char* opt_headerkeep;
 extern const char* opt_headerstrip;
+extern const char* opt_separator;
 
 struct option
 {
